# SurgiSAM2

./: CLAUDE.md  README.md  pyproject.toml  surgisam_utils.py
EvalCode_ForBaselineAndFineTunedModels/: EvalCode_AllDatasets.py  EvalCode_m2caiSeg.py
FinetuningCode_Notebook/: CreatingSAM2FinetuneCompatibleDatasets_pathsremoved.ipynb
FinetuningCode_Notebook/AblationStudies/: sam2.py  train.yaml
PreProcessingCode_Notebooks/: CholecSeg8k_PreProcessingMasks.py  Dresden_PreProcessingMasks.py  Endoscapes_MaskPreprocessing.ipynb  Endoscapes_PreProcessingMasks.py  UD_PreProcessingMasks.py  m2caiSeg_PreProcessingMasks.py
